fix: update project view max-width on mobile

--- a/static/css/components/_project.css
+++ b/static/css/components/_project.css
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 600px;
-  width: 50%;
+  max-width: 650px;
+  width: 100%;
   margin-bottom: var(--space-largest);
 }
 
@@ -17,7 +17,7 @@
   width: 100%;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 500px) {
   .project {
     width: 100%;
   }
